# cf

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
.cursor/hooks/state/: continual-learning.json
.github/workflows/: deploy.yml
crates/core/: Cargo.toml
crates/core/src/: greeting.rs  hello.rs  jwt.rs  lib.rs  template.rs
infra/pulumi/: Pulumi.prod.yaml  Pulumi.yaml  index.ts  package.json
migrations/: 0001_init.sql  0002_add_processed_jobs.sql
pages/: index.html
pages/functions/api/: [[path]].js
plans/setup-initial-cut/: login-error-har.txt
scripts/: cf_core_bg.d.ts  deploy-pages.mjs  deploy-worker.mjs  utils.mjs
shared/types/: api.ts  auth.ts  config.ts  index.ts  room.ts
src/: wasm.ts  worker.ts
src/application/: hello.ts
src/auth/: jwt.ts  middleware.ts
src/domain/: greeting.ts
src/durable-objects/: room.ts
src/services/: config.ts  demo.ts  queue-consumer.ts
tests/: cloudflare-test.d.ts
tests/contract/: api.contract.test.ts
tests/e2e/: pages.spec.ts
tests/integration/: worker.test.ts
tests/setup/: apply-migrations.ts
tests/unit/: greeting.test.ts
